tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__PETAApproved-AAAAAAAAAAAAAAAAAAAJdg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2422,
  "prerequisites": [
    2387,
    2419
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make Critter Snares, first you need to arrange Alder Saplings in the cardinal directions around a Cobweb above a block of water. Then get a zombie to walk onto it and right-click the Cobweb with your Mutating Sprig.\nThis will change the Saplings into the needed Critter Snares. Do this twice.\n\n[note]* May not be PETA approved[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "PETA Approved*",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2387,
    2419
  ],
  "rewards": [],
  "tasks": []
}
