tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__ProbablyUsableFo-AAAAAAAAAAAAAAAAAAABUA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 336,
  "prerequisites": [
    333
  ],
  "properties": {
    "auto_claim": false,
    "desc": "But its main purpose is to brew potions and infusions.\n\nA kettle must be set up in the correct way before it can be used.\n\nFirstly, a fire must be set under the kettle (netherrack is best for this, but wood will do just as well).\n\nNext the kettle must be filled. You can use pipes to automate this.\n\nThirdly, each of the six ingredients for the brew or infusion must be thrown into the kettle, one at a time (the liquid will change color according to the recipe being used).\n\nFinally, a glass bottle must be used on the kettle to bottle the resulting brew, this must be done multiple times depending on the recipe.\n\nIt is important to keep the fire going constantly while the recipe is being prepared, otherwise it will be ruined. Swirls coming from the kettle is a sign all is well, black smoke (and brown liquid) indicates the brew is ruined. When a brew is ruined, the kettle must be emptied with a glass bottle, or just filled with more water, and the whole process repeated.\n\nWhen a brew is complete, the liquid will be the color of the resulting brew and will splutter (in addition to white swirls).\n\nSome recipes will require magical energy from a nearby Altar before they are bottled. If the brew is bottled when insufficient energy is available, the brew will be ruined. Black swirls coming from the Kettle is a good sign there is not enough power. A kettle must be within 14 (to 16) blocks of an Altar in order to obtain power from it (it can obtain power only from a single altar).",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Probably Usable For Soup",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    333
  ],
  "rewards": [],
  "tasks": []
}
