tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__QuartzSphere-AAAAAAAAAAAAAAAAAAAJJw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2343,
  "prerequisites": [
    2342
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Quartz Sphere is a component used in the production of a Crystal Ball and the Seer Stone for summoning coven witches.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quartz Sphere",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2342
  ],
  "rewards": [],
  "tasks": []
}
